@@ -32,7 +32,7 @@ import hudson.model.TaskListener;
 import hudson.model.User;
 import hudson.model.queue.QueueTaskFuture;
 import hudson.util.StreamTaskListener;
-import java.io.IOException;
+
 import java.io.StringWriter;
 import java.util.ArrayList;
 import java.util.Arrays;
@@ -42,7 +42,6 @@ import java.util.List;
 import java.util.Map;
 import java.util.Set;
 import java.util.logging.Level;
-import java.util.stream.Collectors;
 
 import jenkins.branch.MultiBranchProjectFactory;
 import jenkins.branch.MultiBranchProjectFactoryDescriptor;
@@ -56,6 +55,7 @@ import jenkins.scm.impl.mock.MockSCMNavigator;
 import jenkins.security.QueueItemAuthenticatorConfiguration;
 import org.apache.commons.lang.StringUtils;
 
+import static org.awaitility.Awaitility.await;
 import static org.hamcrest.MatcherAssert.assertThat;
 import static org.hamcrest.Matchers.hasSize;
 import static org.hamcrest.Matchers.notNullValue;
@@ -73,16 +73,15 @@ import org.jenkinsci.plugins.workflow.job.WorkflowJob;
 import org.jenkinsci.plugins.workflow.job.WorkflowRun;
 import org.jenkinsci.plugins.workflow.steps.FlowInterruptedException;
 import org.jenkinsci.plugins.workflow.test.steps.SemaphoreStep;
-import org.junit.Before;
-import org.junit.ClassRule;
-import org.junit.Rule;
-import org.junit.Test;
-import org.jvnet.hudson.test.BuildWatcher;
+import org.junit.jupiter.api.BeforeEach;
+import org.junit.jupiter.api.Test;
+
+import org.junit.jupiter.api.extension.RegisterExtension;
 import org.jvnet.hudson.test.CaptureEnvironmentBuilder;
 import org.jvnet.hudson.test.FailureBuilder;
 import org.jvnet.hudson.test.Issue;
 import org.jvnet.hudson.test.JenkinsRule;
-import org.jvnet.hudson.test.LoggerRule;
+import org.jvnet.hudson.test.LogRecorder;
 import org.jvnet.hudson.test.MockAuthorizationStrategy;
 import org.jvnet.hudson.test.MockFolder;
 import org.jvnet.hudson.test.MockQueueItemAuthenticator;
@@ -90,92 +89,106 @@ import org.jvnet.hudson.test.SleepBuilder;
 import org.jvnet.hudson.test.TestBuilder;
 import org.jvnet.hudson.test.TestExtension;
 import org.jvnet.hudson.test.UnstableBuilder;
+import org.jvnet.hudson.test.junit.jupiter.BuildWatcherExtension;
+import org.jvnet.hudson.test.junit.jupiter.WithJenkins;
 import org.jvnet.hudson.test.recipes.LocalData;
 import static org.hamcrest.Matchers.contains;
 import static org.hamcrest.Matchers.containsString;
 import static org.hamcrest.Matchers.equalTo;
 import static org.hamcrest.Matchers.instanceOf;
-import static org.hamcrest.Matchers.not;
-import static org.junit.Assert.assertEquals;
-import static org.junit.Assert.assertNotNull;
-import static org.junit.Assume.assumeThat;
+import static org.junit.jupiter.api.Assertions.assertEquals;
+import static org.junit.jupiter.api.Assertions.assertNotNull;
 import static org.junit.jupiter.api.Assertions.assertNull;
+import static org.junit.jupiter.api.Assumptions.assumeFalse;
 
-public class BuildTriggerStepTest {
+@WithJenkins
+class BuildTriggerStepTest {
 
-    @ClassRule public static BuildWatcher buildWatcher = new BuildWatcher();
-    @Rule public JenkinsRule j = new JenkinsRule();
-    @Rule public LoggerRule logging = new LoggerRule();
+    @SuppressWarnings("unused")
+    @RegisterExtension
+    private static final BuildWatcherExtension BUILD_WATCHER = new BuildWatcherExtension();
 
-    @Before public void runQuickly() throws IOException {
-        j.jenkins.setQuietPeriod(0);
+    private final LogRecorder logging = new LogRecorder();
+
+    private JenkinsRule r;
+
+    @BeforeEach
+    void beforeEach(JenkinsRule rule) throws Exception {
+        r = rule;
+        r.jenkins.setQuietPeriod(0);
     }
 
     @Issue("JENKINS-25851")
-    @Test public void buildTopLevelProject() throws Exception {
-        FreeStyleProject ds = j.createFreeStyleProject("ds");
-        WorkflowJob us = j.jenkins.createProject(WorkflowJob.class, "us");
+    @Test
+    void buildTopLevelProject() throws Exception {
+        FreeStyleProject ds = r.createFreeStyleProject("ds");
+        WorkflowJob us = r.jenkins.createProject(WorkflowJob.class, "us");
         us.setDefinition(new CpsFlowDefinition(
             "def ds = build 'ds'\n" +
             "echo \"ds.result=${ds.result} ds.number=${ds.number}\"", true));
-        j.assertLogContains("ds.result=SUCCESS ds.number=1", j.buildAndAssertSuccess(us));
+        r.assertLogContains("ds.result=SUCCESS ds.number=1", r.buildAndAssertSuccess(us));
         // TODO JENKINS-28673 assert no warnings, as in StartupTest.noWarnings
         // (but first need to deal with `WARNING: Failed to instantiate optional component org.jenkinsci.plugins.workflow.steps.scm.SubversionStep$DescriptorImpl; skipping`)
         ds.getBuildByNumber(1).delete();
     }
 
     @Issue("JENKINS-25851")
-    @Test public void failingBuild() throws Exception {
-        j.createFreeStyleProject("ds").getBuildersList().add(new FailureBuilder());
-        WorkflowJob us = j.jenkins.createProject(WorkflowJob.class, "us");
+    @Test
+    void failingBuild() throws Exception {
+        r.createFreeStyleProject("ds").getBuildersList().add(new FailureBuilder());
+        WorkflowJob us = r.jenkins.createProject(WorkflowJob.class, "us");
         us.setDefinition(new CpsFlowDefinition("build 'ds'", true));
-        j.assertBuildStatus(Result.FAILURE, us.scheduleBuild2(0));
+        r.assertBuildStatus(Result.FAILURE, us.scheduleBuild2(0));
         us.setDefinition(new CpsFlowDefinition("echo \"ds.result=${build(job: 'ds', propagate: false).result}\"", true));
-        j.assertLogContains("ds.result=FAILURE", j.buildAndAssertSuccess(us));
+        r.assertLogContains("ds.result=FAILURE", r.buildAndAssertSuccess(us));
     }
 
     @Issue("JENKINS-70623")
-    @Test public void failingBuildWithWarningAction() throws Exception {
-        j.createFreeStyleProject("ds").getBuildersList().add(new FailureBuilder());
-        WorkflowJob upstream = j.jenkins.createProject(WorkflowJob.class, "us");
+    @Test
+    void failingBuildWithWarningAction() throws Exception {
+        r.createFreeStyleProject("ds").getBuildersList().add(new FailureBuilder());
+        WorkflowJob upstream = r.jenkins.createProject(WorkflowJob.class, "us");
         upstream.setDefinition(new CpsFlowDefinition("build(job: 'ds')", true));
-        WorkflowRun lastUpstream = j.buildAndAssertStatus(Result.FAILURE, upstream);
-        j.assertLogContains("completed: FAILURE", lastUpstream);
+        WorkflowRun lastUpstream = r.buildAndAssertStatus(Result.FAILURE, upstream);
+        r.assertLogContains("completed: FAILURE", lastUpstream);
         FlowNode buildTriggerNode = findFirstNodeWithDescriptor(lastUpstream.getExecution(), BuildTriggerStep.DescriptorImpl.class);
         WarningAction action = buildTriggerNode.getAction(WarningAction.class);
         assertNotNull(action);
-        assertEquals(action.getResult(), Result.FAILURE);
+        assertEquals(Result.FAILURE, action.getResult());
     }
 
     @Issue("JENKINS-70623")
-    @Test public void unstableBuildWithWarningAction() throws Exception {
-        j.createFreeStyleProject("ds").getBuildersList().add(new UnstableBuilder());
-        WorkflowJob upstream = j.jenkins.createProject(WorkflowJob.class, "us");
+    @Test
+    void unstableBuildWithWarningAction() throws Exception {
+        r.createFreeStyleProject("ds").getBuildersList().add(new UnstableBuilder());
+        WorkflowJob upstream = r.jenkins.createProject(WorkflowJob.class, "us");
         upstream.setDefinition(new CpsFlowDefinition("build(job: 'ds')", true));
-        WorkflowRun lastUpstream = j.buildAndAssertStatus(Result.UNSTABLE, upstream);
-        j.assertLogContains("completed: UNSTABLE", lastUpstream);
+        WorkflowRun lastUpstream = r.buildAndAssertStatus(Result.UNSTABLE, upstream);
+        r.assertLogContains("completed: UNSTABLE", lastUpstream);
         FlowNode buildTriggerNode = findFirstNodeWithDescriptor(lastUpstream.getExecution(), BuildTriggerStep.DescriptorImpl.class);
         WarningAction action = buildTriggerNode.getAction(WarningAction.class);
         assertNotNull(action);
-        assertEquals(action.getResult(), Result.UNSTABLE);
+        assertEquals(Result.UNSTABLE, action.getResult());
     }
 
     @Issue("JENKINS-70623")
-    @Test public void successBuildNoWarningAction() throws Exception {
-        j.createFreeStyleProject("ds");
-        WorkflowJob upstream = j.jenkins.createProject(WorkflowJob.class, "us");
+    @Test
+    void successBuildNoWarningAction() throws Exception {
+        r.createFreeStyleProject("ds");
+        WorkflowJob upstream = r.jenkins.createProject(WorkflowJob.class, "us");
         upstream.setDefinition(new CpsFlowDefinition("build(job: 'ds')", true));
-        WorkflowRun lastUpstream = j.buildAndAssertSuccess(upstream);
-        j.assertLogContains("completed: SUCCESS", lastUpstream);
+        WorkflowRun lastUpstream = r.buildAndAssertSuccess(upstream);
+        r.assertLogContains("completed: SUCCESS", lastUpstream);
         FlowNode buildTriggerNode = findFirstNodeWithDescriptor(lastUpstream.getExecution(), BuildTriggerStep.DescriptorImpl.class);
         WarningAction action = buildTriggerNode.getAction(WarningAction.class);
         assertNull(action);
     }
 
     @Issue("JENKINS-60995")
-    @Test public void upstreamCause() throws Exception {
-        FreeStyleProject downstream = j.createFreeStyleProject("downstream");
-        WorkflowJob upstream = j.jenkins.createProject(WorkflowJob.class, "upstream");
+    @Test
+    void upstreamCause() throws Exception {
+        FreeStyleProject downstream = r.createFreeStyleProject("downstream");
+        WorkflowJob upstream = r.jenkins.createProject(WorkflowJob.class, "upstream");
 
         upstream.setDefinition(new CpsFlowDefinition("build 'downstream'", true));
         int numberOfUpstreamBuilds = 3;
@@ -185,18 +198,18 @@ public class BuildTriggerStepTest {
             Thread.sleep(100);
         }
         for (WorkflowRun upstreamRun : upstream.getBuilds()) {
-            j.waitForCompletion(upstreamRun);
-            j.assertBuildStatus(Result.SUCCESS, upstreamRun);
+            r.waitForCompletion(upstreamRun);
+            r.assertBuildStatus(Result.SUCCESS, upstreamRun);
         }
         // Wait for all downstream builds to complete
-        j.waitUntilNoActivity();
+        r.waitUntilNoActivity();
 
         List<BuildUpstreamCause> upstreamCauses = new ArrayList<>();
         for (Run<FreeStyleProject, FreeStyleBuild> downstreamRun : downstream.getBuilds()) {
             upstreamCauses.addAll(downstreamRun.getCauses().stream()
                 .filter(BuildUpstreamCause.class::isInstance)
                 .map(BuildUpstreamCause.class::cast)
-                .collect(Collectors.toList()));
+                .toList());
         }
         assertThat("There should be as many upstream causes as upstream builds", upstreamCauses, hasSize(numberOfUpstreamBuilds));
 
@@ -206,15 +219,14 @@ public class BuildTriggerStepTest {
             ups.add(upstreamRun);
             FlowExecution execution = upstreamRun.getExecution();
             FlowNode buildTriggerNode = findFirstNodeWithDescriptor(execution, BuildTriggerStep.DescriptorImpl.class);
-            assertEquals("node id should be build trigger node", buildTriggerNode, execution.getNode(up.getNodeId()));
+            assertEquals(buildTriggerNode, execution.getNode(up.getNodeId()), "node id should be build trigger node");
         }
-        assertEquals("There should be as many upstream causes as referenced upstream builds", numberOfUpstreamBuilds, ups.size());
+        assertEquals(numberOfUpstreamBuilds, ups.size(), "There should be as many upstream causes as referenced upstream builds");
     }
 
     static FlowNode findFirstNodeWithDescriptor(FlowExecution execution, Class<BuildTriggerStep.DescriptorImpl> cls) {
         for (FlowNode node : new FlowGraphWalker(execution)) {
-            if (node instanceof StepAtomNode) {
-                StepAtomNode stepAtomNode = (StepAtomNode) node;
+            if (node instanceof StepAtomNode stepAtomNode) {
                 if (cls.isInstance(stepAtomNode.getDescriptor())) {
                     return stepAtomNode;
                 }
@@ -224,12 +236,13 @@ public class BuildTriggerStepTest {
     }
 
     @Issue("JENKINS-38339")
-    @Test public void upstreamNodeAction() throws Exception {
-        FreeStyleProject downstream = j.createFreeStyleProject("downstream");
-        WorkflowJob upstream = j.jenkins.createProject(WorkflowJob.class, "upstream");
+    @Test
+    void upstreamNodeAction() throws Exception {
+        FreeStyleProject downstream = r.createFreeStyleProject("downstream");
+        WorkflowJob upstream = r.jenkins.createProject(WorkflowJob.class, "upstream");
 
         upstream.setDefinition(new CpsFlowDefinition("build 'downstream'", true));
-        j.assertBuildStatus(Result.SUCCESS, upstream.scheduleBuild2(0));
+        r.assertBuildStatus(Result.SUCCESS, upstream.scheduleBuild2(0));
 
         WorkflowRun lastUpstreamRun = upstream.getLastBuild();
         FreeStyleBuild lastDownstreamRun = downstream.getLastBuild();
@@ -239,53 +252,54 @@ public class BuildTriggerStepTest {
         assertNotNull(buildTriggerNode);
 
         List<BuildUpstreamNodeAction> actions = lastDownstreamRun.getActions(BuildUpstreamNodeAction.class);
-        assertEquals("action count", 1, actions.size());
+        assertEquals(1, actions.size(), "action count");
 
         BuildUpstreamNodeAction action = actions.get(0);
-        assertEquals("correct upstreamRunId", action.getUpstreamRunId(), lastUpstreamRun.getExternalizableId());
-        assertEquals("valid upstreamNodeId", buildTriggerNode, execution.getNode(action.getUpstreamNodeId()));
+        assertEquals(action.getUpstreamRunId(), lastUpstreamRun.getExternalizableId(), "correct upstreamRunId");
+        assertEquals(buildTriggerNode, execution.getNode(action.getUpstreamNodeId()), "valid upstreamNodeId");
     }
 
     @SuppressWarnings("deprecation")
     @Test
-    public void buildFolderProject() throws Exception {
-        MockFolder dir1 = j.createFolder("dir1");
+    void buildFolderProject() throws Exception {
+        MockFolder dir1 = r.createFolder("dir1");
         FreeStyleProject downstream = dir1.createProject(FreeStyleProject.class, "downstream");
         downstream.getBuildersList().add(new SleepBuilder(1));
 
-        MockFolder dir2 = j.createFolder("dir2");
+        MockFolder dir2 = r.createFolder("dir2");
         WorkflowJob upstream = dir2.createProject(WorkflowJob.class, "upstream");
         upstream.setDefinition(new CpsFlowDefinition("build '../dir1/downstream'", true));
 
-        j.buildAndAssertSuccess(upstream);
+        r.buildAndAssertSuccess(upstream);
         assertEquals(1, downstream.getBuilds().size());
     }
 
     @Test
-    public void buildParallelTests() throws Exception {
-        FreeStyleProject p1 = j.createFreeStyleProject("test1");
+    void buildParallelTests() throws Exception {
+        FreeStyleProject p1 = r.createFreeStyleProject("test1");
         p1.getBuildersList().add(new SleepBuilder(1));
 
-        FreeStyleProject p2 = j.createFreeStyleProject("test2");
+        FreeStyleProject p2 = r.createFreeStyleProject("test2");
         p2.getBuildersList().add(new SleepBuilder(1));
 
-        WorkflowJob foo = j.jenkins.createProject(WorkflowJob.class, "foo");
-        foo.setDefinition(new CpsFlowDefinition(StringUtils.join(Collections.singletonList("parallel(test1: {\n" +
-                "          build('test1');\n" +
-                "        }, test2: {\n" +
-                "          build('test2');\n" +
-                "        })"), "\n"), true));
+        WorkflowJob foo = r.jenkins.createProject(WorkflowJob.class, "foo");
+        foo.setDefinition(new CpsFlowDefinition(StringUtils.join(Collections.singletonList("""
+                parallel(test1: {
+                          build('test1');
+                        }, test2: {
+                          build('test2');
+                        })"""), "\n"), true));
 
-        j.buildAndAssertSuccess(foo);
+        r.buildAndAssertSuccess(foo);
     }
 
 
     @Test
-    public void abortBuild() throws Exception {
-        FreeStyleProject p = j.createFreeStyleProject("test1");
+    void abortBuild() throws Exception {
+        FreeStyleProject p = r.createFreeStyleProject("test1");
         p.getBuildersList().add(new SleepBuilder(Long.MAX_VALUE));
 
-        WorkflowJob foo = j.jenkins.createProject(WorkflowJob.class, "foo");
+        WorkflowJob foo = r.jenkins.createProject(WorkflowJob.class, "foo");
         foo.setDefinition(new CpsFlowDefinition(StringUtils.join(Collections.singletonList("build('test1');"), "\n"), true));
 
         QueueTaskFuture<WorkflowRun> q = foo.scheduleBuild2(0);
@@ -301,12 +315,13 @@ public class BuildTriggerStepTest {
         }
         fb.getExecutor().interrupt();
 
-        j.assertBuildStatus(Result.ABORTED, j.waitForCompletion(fb));
-        j.assertBuildStatus(Result.ABORTED, q.get());
+        r.assertBuildStatus(Result.ABORTED, r.waitForCompletion(fb));
+        r.assertBuildStatus(Result.ABORTED, q.get());
     }
 
     @Issue("JENKINS-49073")
-    @Test public void downstreamResult() throws Exception {
+    @Test
+    void downstreamResult() throws Exception {
         downstreamResult(Result.SUCCESS);
         downstreamResult(Result.UNSTABLE);
         downstreamResult(Result.FAILURE);
@@ -315,78 +330,79 @@ public class BuildTriggerStepTest {
     }
 
     private void downstreamResult(Result result) throws Exception {
-        FreeStyleProject ds = j.createFreeStyleProject();
+        FreeStyleProject ds = r.createFreeStyleProject();
         ds.getBuildersList().add(new TestBuilder() {
             @Override public boolean perform(AbstractBuild<?, ?> build, Launcher launcher, BuildListener listener) {
                 build.setResult(result);
                 return true;
             }
         });
-        WorkflowJob us = j.createProject(WorkflowJob.class);
+        WorkflowJob us = r.createProject(WorkflowJob.class);
         us.setDefinition(new CpsFlowDefinition(String.format("build '%s'", ds.getName()), true));
-        j.assertBuildStatus(result, us.scheduleBuild2(0));
+        r.assertBuildStatus(result, us.scheduleBuild2(0));
     }
 
     @Test
-    public void cancelBuildQueue() throws Exception {
-        FreeStyleProject p = j.createFreeStyleProject("test1");
+    void cancelBuildQueue() throws Exception {
+        FreeStyleProject p = r.createFreeStyleProject("test1");
         p.getBuildersList().add(new SleepBuilder(Long.MAX_VALUE));
 
-        WorkflowJob foo = j.jenkins.createProject(WorkflowJob.class, "foo");
+        WorkflowJob foo = r.jenkins.createProject(WorkflowJob.class, "foo");
         foo.setDefinition(new CpsFlowDefinition(StringUtils.join(Collections.singletonList("build('test1');"), "\n"), true));
 
-        j.jenkins.setNumExecutors(0); //should force freestyle build to remain in the queue?
+        r.jenkins.setNumExecutors(0); //should force freestyle build to remain in the queue?
 
         QueueTaskFuture<WorkflowRun> q = foo.scheduleBuild2(0);
 
         WorkflowRun b = foo.scheduleBuild2(0).waitForStart();
-        j.waitForMessage("Scheduling project", b);
+        r.waitForMessage("Scheduling project", b);
         CpsFlowExecution e = (CpsFlowExecution) b.getExecutionPromise().get();
         e.waitForSuspension();
 
-        Queue.Item[] items = j.jenkins.getQueue().getItems();
+        Queue.Item[] items = r.jenkins.getQueue().getItems();
         assertEquals(1, items.length);
-        j.jenkins.getQueue().cancel(items[0]);
+        r.jenkins.getQueue().cancel(items[0]);
 
-        j.assertBuildStatus(Result.FAILURE,q.get());
+        r.assertBuildStatus(Result.FAILURE,q.get());
     }
 
     /** Interrupting the flow ought to interrupt its downstream builds too, even across nested parallel branches. */
-    @Test public void interruptFlow() throws Exception {
-        FreeStyleProject ds1 = j.createFreeStyleProject("ds1");
+    @Test
+    void interruptFlow() throws Exception {
+        FreeStyleProject ds1 = r.createFreeStyleProject("ds1");
         ds1.getBuildersList().add(new SleepBuilder(Long.MAX_VALUE));
-        FreeStyleProject ds2 = j.createFreeStyleProject("ds2");
+        FreeStyleProject ds2 = r.createFreeStyleProject("ds2");
         ds2.getBuildersList().add(new SleepBuilder(Long.MAX_VALUE));
-        FreeStyleProject ds3 = j.createFreeStyleProject("ds3");
+        FreeStyleProject ds3 = r.createFreeStyleProject("ds3");
         ds3.getBuildersList().add(new SleepBuilder(Long.MAX_VALUE));
-        WorkflowJob us = j.jenkins.createProject(WorkflowJob.class, "us");
+        WorkflowJob us = r.jenkins.createProject(WorkflowJob.class, "us");
         us.setDefinition(new CpsFlowDefinition("parallel ds1: {build 'ds1'}, ds23: {parallel ds2: {build 'ds2'}, ds3: {build 'ds3'}}", true));
-        j.jenkins.setNumExecutors(3);
-        j.jenkins.setNodes(j.jenkins.getNodes()); // TODO https://github.com/jenkinsci/jenkins/pull/1596 renders this workaround unnecessary
+        r.jenkins.setNumExecutors(3);
+        r.jenkins.setNodes(r.jenkins.getNodes()); // TODO https://github.com/jenkinsci/jenkins/pull/1596 renders this workaround unnecessary
         WorkflowRun usb = us.scheduleBuild2(0).getStartCondition().get();
         assertEquals(1, usb.getNumber());
-        FreeStyleBuild ds1b, ds2b, ds3b;
-        while ((ds1b = ds1.getLastBuild()) == null || (ds2b = ds2.getLastBuild()) == null || (ds3b = ds3.getLastBuild()) == null) {
-            Thread.sleep(100);
-        }
-        assertEquals(1, ds1b.getNumber());
-        assertEquals(1, ds2b.getNumber());
-        assertEquals(1, ds3b.getNumber());
+
+        await().until(() -> (ds1.getLastBuild() != null && ds2.getLastBuild() != null && ds3.getLastBuild() != null));
+
+        assertEquals(1, ds1.getLastBuild().getNumber());
+        assertEquals(1, ds2.getLastBuild().getNumber());
+        assertEquals(1, ds3.getLastBuild().getNumber());
         // Same as X button in UI.
         // Should be the same as, e.g., GerritTrigger.RunningJobs.cancelJob, which calls Executor.interrupt directly.
         // (Not if the Executor.currentExecutable is an AfterRestartTask.Body, though in that case probably the FreeStyleBuild would have been killed by restart anyway!)
         usb.doStop();
-        j.assertBuildStatus(Result.ABORTED, j.waitForCompletion(usb));
-        j.assertBuildStatus(Result.ABORTED, j.waitForCompletion(ds1b));
-        j.assertBuildStatus(Result.ABORTED, j.waitForCompletion(ds2b));
-        j.assertBuildStatus(Result.ABORTED, j.waitForCompletion(ds3b));
+        r.assertBuildStatus(Result.ABORTED, r.waitForCompletion(usb));
+        r.assertBuildStatus(Result.ABORTED, r.waitForCompletion(ds1.getLastBuild()));
+        r.assertBuildStatus(Result.ABORTED, r.waitForCompletion(ds2.getLastBuild()));
+        r.assertBuildStatus(Result.ABORTED, r.waitForCompletion(ds3.getLastBuild()));
     }
 
     @Issue("JENKINS-31902")
-    @Test public void interruptFlowDownstreamFlow() throws Exception {
-        WorkflowJob ds = j.jenkins.createProject(WorkflowJob.class, "ds");
+    @Test
+    void interruptFlowDownstreamFlow() throws Exception {
+        WorkflowJob ds = r.jenkins.createProject(WorkflowJob.class, "ds");
         ds.setDefinition(new CpsFlowDefinition("semaphore 'ds'", true));
-        WorkflowJob us = j.jenkins.createProject(WorkflowJob.class, "us");
+        WorkflowJob us = r.jenkins.createProject(WorkflowJob.class, "us");
         us.setDefinition(new CpsFlowDefinition("build 'ds'", true));
         WorkflowRun usb = us.scheduleBuild2(0).getStartCondition().get();
         assertEquals(1, usb.getNumber());
@@ -394,14 +410,15 @@ public class BuildTriggerStepTest {
         WorkflowRun dsb = ds.getLastBuild();
         assertEquals(1, dsb.getNumber());
         usb.doStop();
-        j.assertBuildStatus(Result.ABORTED, j.waitForCompletion(usb));
-        j.assertBuildStatus(Result.ABORTED, j.waitForCompletion(dsb));
+        r.assertBuildStatus(Result.ABORTED, r.waitForCompletion(usb));
+        r.assertBuildStatus(Result.ABORTED, r.waitForCompletion(dsb));
     }
 
-    @Test public void interruptFlowNonPropagate() throws Exception {
-        WorkflowJob ds = j.jenkins.createProject(WorkflowJob.class, "ds");
+    @Test
+    void interruptFlowNonPropagate() throws Exception {
+        WorkflowJob ds = r.jenkins.createProject(WorkflowJob.class, "ds");
         ds.setDefinition(new CpsFlowDefinition("semaphore 'ds'", true));
-        WorkflowJob us = j.jenkins.createProject(WorkflowJob.class, "us");
+        WorkflowJob us = r.jenkins.createProject(WorkflowJob.class, "us");
         us.setDefinition(new CpsFlowDefinition("while (true) {build job: 'ds', propagate: false}", true));
         WorkflowRun usb = us.scheduleBuild2(0).getStartCondition().get();
         assertEquals(1, usb.getNumber());
@@ -409,29 +426,31 @@ public class BuildTriggerStepTest {
         WorkflowRun dsb = ds.getLastBuild();
         assertEquals(1, dsb.getNumber());
         usb.doStop();
-        j.assertBuildStatus(Result.ABORTED, j.waitForCompletion(usb));
-        j.assertBuildStatus(Result.ABORTED, j.waitForCompletion(dsb));
+        r.assertBuildStatus(Result.ABORTED, r.waitForCompletion(usb));
+        r.assertBuildStatus(Result.ABORTED, r.waitForCompletion(dsb));
     }
 
     @SuppressWarnings("deprecation")
-    @Test public void triggerWorkflow() throws Exception {
-        WorkflowJob us = j.jenkins.createProject(WorkflowJob.class, "us");
+    @Test
+    void triggerWorkflow() throws Exception {
+        WorkflowJob us = r.jenkins.createProject(WorkflowJob.class, "us");
         us.setDefinition(new CpsFlowDefinition("build 'ds'", true));
-        WorkflowJob ds = j.jenkins.createProject(WorkflowJob.class, "ds");
+        WorkflowJob ds = r.jenkins.createProject(WorkflowJob.class, "ds");
         ds.setDefinition(new CpsFlowDefinition("echo 'OK'", true));
-        j.buildAndAssertSuccess(us);
+        r.buildAndAssertSuccess(us);
         assertEquals(1, ds.getBuilds().size());
     }
 
     @Issue("JENKINS-31897")
-    @Test public void parameters() throws Exception {
-        WorkflowJob us = j.jenkins.createProject(WorkflowJob.class, "us");
-        FreeStyleProject ds = j.jenkins.createProject(FreeStyleProject.class, "ds");
+    @Test
+    void parameters() throws Exception {
+        WorkflowJob us = r.jenkins.createProject(WorkflowJob.class, "us");
+        FreeStyleProject ds = r.jenkins.createProject(FreeStyleProject.class, "ds");
         ds.addProperty(new ParametersDefinitionProperty(new StringParameterDefinition("branch", "master"), new BooleanParameterDefinition("extra", false, null)));
         CaptureEnvironmentBuilder env = new CaptureEnvironmentBuilder();
         ds.getBuildersList().add(env);
         us.setDefinition(new CpsFlowDefinition("build 'ds'", true));
-        WorkflowRun us1 = j.buildAndAssertSuccess(us);
+        WorkflowRun us1 = r.buildAndAssertSuccess(us);
         assertEquals("1", env.getEnvVars().get("BUILD_NUMBER"));
         assertEquals("master", env.getEnvVars().get("branch"));
         assertEquals("false", env.getEnvVars().get("extra"));
@@ -439,156 +458,170 @@ public class BuildTriggerStepTest {
         assertNotNull(cause);
         assertEquals(us1, cause.getUpstreamRun());
         us.setDefinition(new CpsFlowDefinition("build job: 'ds', parameters: [string(name: 'branch', value: 'release')]", true));
-        j.buildAndAssertSuccess(us);
+        r.buildAndAssertSuccess(us);
         assertEquals("2", env.getEnvVars().get("BUILD_NUMBER"));
         assertEquals("release", env.getEnvVars().get("branch"));
         assertEquals("false", env.getEnvVars().get("extra")); //
         us.setDefinition(new CpsFlowDefinition("build job: 'ds', parameters: [string(name: 'branch', value: 'release'), booleanParam(name: 'extra', value: true)]", true));
-        j.buildAndAssertSuccess(us);
+        r.buildAndAssertSuccess(us);
         assertEquals("3", env.getEnvVars().get("BUILD_NUMBER"));
         assertEquals("release", env.getEnvVars().get("branch"));
         assertEquals("true", env.getEnvVars().get("extra"));
     }
 
     @Issue("JENKINS-26123")
-    @Test public void noWait() throws Exception {
-        j.createFreeStyleProject("ds").setAssignedLabel(Label.get("nonexistent"));
-        WorkflowJob us = j.jenkins.createProject(WorkflowJob.class, "us");
+    @Test
+    void noWait() throws Exception {
+        r.createFreeStyleProject("ds").setAssignedLabel(Label.get("nonexistent"));
+        WorkflowJob us = r.jenkins.createProject(WorkflowJob.class, "us");
         us.setDefinition(new CpsFlowDefinition("build job: 'ds', wait: false", true));
-        j.buildAndAssertSuccess(us);
+        r.buildAndAssertSuccess(us);
     }
 
-    @Test public void waitForStart() throws Exception {
-        FreeStyleProject ds = j.createFreeStyleProject("ds");
+    @Test
+    void waitForStart() throws Exception {
+        FreeStyleProject ds = r.createFreeStyleProject("ds");
         ds.getBuildersList().add(new FailureBuilder());
-        WorkflowJob us = j.jenkins.createProject(WorkflowJob.class, "us");
+        WorkflowJob us = r.jenkins.createProject(WorkflowJob.class, "us");
         us.setDefinition(new CpsFlowDefinition("build job: 'ds', waitForStart: true", true));
-        j.assertLogContains("Starting building:", j.buildAndAssertSuccess(us));
-        j.assertBuildStatus(Result.FAILURE, j.waitForCompletion(ds.getLastBuild()));
+        r.assertLogContains("Starting building:", r.buildAndAssertSuccess(us));
+        r.assertBuildStatus(Result.FAILURE, r.waitForCompletion(ds.getLastBuild()));
     }
 
-    @Test public void rejectedStart() throws Exception {
-        j.createFreeStyleProject("ds");
-        WorkflowJob us = j.jenkins.createProject(WorkflowJob.class, "us");
+    @Test
+    void rejectedStart() throws Exception {
+        r.createFreeStyleProject("ds");
+        WorkflowJob us = r.jenkins.createProject(WorkflowJob.class, "us");
         // wait: true also fails as expected w/o fix, just more slowly (test timeout):
         us.setDefinition(new CpsFlowDefinition("build job: 'ds', wait: false", true));
-        j.assertLogContains("Failed to trigger build of ds", j.assertBuildStatus(Result.FAILURE, us.scheduleBuild2(0)));
+        r.assertLogContains("Failed to trigger build of ds", r.assertBuildStatus(Result.FAILURE, us.scheduleBuild2(0)));
     }
-    @TestExtension("rejectedStart") public static final class QDH extends Queue.QueueDecisionHandler {
-        @Override public boolean shouldSchedule(Queue.Task p, List<Action> actions) {
+
+    @TestExtension("rejectedStart")
+    public static final class QDH extends Queue.QueueDecisionHandler {
+        @Override
+        public boolean shouldSchedule(Queue.Task p, List<Action> actions) {
             return p instanceof WorkflowJob; // i.e., refuse FreestyleProject
         }
     }
 
     @Issue("JENKINS-25851")
-    @Test public void buildVariables() throws Exception {
-        j.createFreeStyleProject("ds").addProperty(new ParametersDefinitionProperty(new StringParameterDefinition("param", "default")));
-        WorkflowJob us = j.jenkins.createProject(WorkflowJob.class, "us");
+    @Test
+    void buildVariables() throws Exception {
+        r.createFreeStyleProject("ds").addProperty(new ParametersDefinitionProperty(new StringParameterDefinition("param", "default")));
+        WorkflowJob us = r.jenkins.createProject(WorkflowJob.class, "us");
         us.setDefinition(new CpsFlowDefinition("echo \"build var: ${build(job: 'ds', parameters: [string(name: 'param', value: 'override')]).buildVariables.param}\"", true));
-        j.assertLogContains("build var: override", j.buildAndAssertSuccess(us));
+        r.assertLogContains("build var: override", r.buildAndAssertSuccess(us));
     }
 
     @Issue("JENKINS-29169")
-    @Test public void buildVariablesWorkflow() throws Exception {
-        WorkflowJob ds = j.jenkins.createProject(WorkflowJob.class, "ds");
+    @Test
+    void buildVariablesWorkflow() throws Exception {
+        WorkflowJob ds = r.jenkins.createProject(WorkflowJob.class, "ds");
         ds.setDefinition(new CpsFlowDefinition("env.RESULT = \"ds-${env.BUILD_NUMBER}\"", true));
-        WorkflowJob us = j.jenkins.createProject(WorkflowJob.class, "us");
+        WorkflowJob us = r.jenkins.createProject(WorkflowJob.class, "us");
         us.setDefinition(new CpsFlowDefinition("def vars = build('ds').buildVariables; echo \"received RESULT=${vars.RESULT} vs. BUILD_NUMBER=${vars.BUILD_NUMBER}\"", true));
-        j.assertLogContains("received RESULT=ds-1 vs. BUILD_NUMBER=null", j.buildAndAssertSuccess(us));
+        r.assertLogContains("received RESULT=ds-1 vs. BUILD_NUMBER=null", r.buildAndAssertSuccess(us));
         ds.getBuildByNumber(1).delete();
     }
 
     @Issue("JENKINS-28063")
-    @Test public void coalescedQueue() throws Exception {
-        FreeStyleProject ds = j.createFreeStyleProject("ds");
+    @Test
+    void coalescedQueue() throws Exception {
+        FreeStyleProject ds = r.createFreeStyleProject("ds");
         ds.setQuietPeriod(3);
         ds.setConcurrentBuild(true);
         ds.getBuildersList().add(new SleepBuilder(3000));
-        WorkflowJob us = j.jenkins.createProject(WorkflowJob.class, "us");
+        WorkflowJob us = r.jenkins.createProject(WorkflowJob.class, "us");
         us.setDefinition(new CpsFlowDefinition("echo \"triggered #${build('ds').number}\"", true));
         WorkflowRun us1 = us.scheduleBuild2(0).waitForStart();
         assertEquals(1, us1.getNumber());
-        j.waitForMessage("Scheduling project: ds", us1);
+        r.waitForMessage("Scheduling project: ds", us1);
         QueueTaskFuture<WorkflowRun> us2F = us.scheduleBuild2(0);
-        j.assertLogContains("triggered #1", j.waitForCompletion(us1));
+        r.assertLogContains("triggered #1", r.waitForCompletion(us1));
         WorkflowRun us2 = us2F.get();
         assertEquals(2, us2.getNumber());
-        j.assertLogContains("triggered #1", us2);
+        r.assertLogContains("triggered #1", us2);
         FreeStyleBuild ds1 = ds.getLastBuild();
         assertEquals(1, ds1.getNumber());
         assertEquals(2, ds1.getCauses().size()); // 2× UpstreamCause
     }
 
     @Issue("http://stackoverflow.com/q/32228590/12916")
-    @Test public void nonCoalescedQueueParallel() throws Exception {
-        j.jenkins.setNumExecutors(5);
-        FreeStyleProject ds = j.createFreeStyleProject("ds");
+    @Test
+    void nonCoalescedQueueParallel() throws Exception {
+        r.jenkins.setNumExecutors(5);
+        FreeStyleProject ds = r.createFreeStyleProject("ds");
         ds.setConcurrentBuild(true);
         ds.addProperty(new ParametersDefinitionProperty(new StringParameterDefinition("which", null)));
         ds.getBuildersList().add(new SleepBuilder(3000));
-        WorkflowJob us = j.jenkins.createProject(WorkflowJob.class, "us");
+        WorkflowJob us = r.jenkins.createProject(WorkflowJob.class, "us");
         us.setDefinition(new CpsFlowDefinition(
-            "def branches = [:]\n" +
-            "for (int i = 0; i < 5; i++) {\n" +
-            "  def which = \"${i}\"\n" +
-            "  branches[\"branch${i}\"] = {\n" +
-            "    build job: 'ds', parameters: [string(name: 'which', value: which)]\n" +
-            "  }\n" +
-            "}\n" +
-            "parallel branches", true));
-        j.buildAndAssertSuccess(us);
+                """
+                        def branches = [:]
+                        for (int i = 0; i < 5; i++) {
+                          def which = "${i}"
+                          branches["branch${i}"] = {
+                            build job: 'ds', parameters: [string(name: 'which', value: which)]
+                          }
+                        }
+                        parallel branches""", true));
+        r.buildAndAssertSuccess(us);
         FreeStyleBuild ds1 = ds.getLastBuild();
         assertEquals(5, ds1.getNumber());
     }
 
     @Issue("JENKINS-39454")
-    @Test public void raceCondition() throws Exception {
+    @Test
+    void raceCondition() throws Exception {
         logging.record(BuildTriggerStepExecution.class.getPackage().getName(), Level.FINE).record(Queue.class, Level.FINE).record(Executor.class, Level.FINE);
-        j.jenkins.setQuietPeriod(0);
-        WorkflowJob ds = j.jenkins.createProject(WorkflowJob.class, "ds");
+        r.jenkins.setQuietPeriod(0);
+        WorkflowJob ds = r.jenkins.createProject(WorkflowJob.class, "ds");
         ds.setDefinition(new CpsFlowDefinition("sleep 1", true));
-        WorkflowJob us = j.jenkins.createProject(WorkflowJob.class, "us");
+        WorkflowJob us = r.jenkins.createProject(WorkflowJob.class, "us");
         us.setDefinition(new CpsFlowDefinition("def rebuild() {for (int i = 0; i < 20; i++) {build 'ds'}}; parallel A: {rebuild()}, B: {rebuild()}, C: {rebuild()}", true));
-        j.buildAndAssertSuccess(us);
+        r.buildAndAssertSuccess(us);
     }
 
     @Issue("JENKINS-31897")
-    @Test public void defaultParameters() throws Exception {
-        WorkflowJob us = j.jenkins.createProject(WorkflowJob.class, "us");
+    @Test
+    void defaultParameters() throws Exception {
+        WorkflowJob us = r.jenkins.createProject(WorkflowJob.class, "us");
         us.setDefinition(new CpsFlowDefinition("build job: 'ds', parameters: [string(name: 'PARAM1', value: 'first')]", true));
-        WorkflowJob ds = j.jenkins.createProject(WorkflowJob.class, "ds");
+        WorkflowJob ds = r.jenkins.createProject(WorkflowJob.class, "ds");
         ds.addProperty(new ParametersDefinitionProperty(new StringParameterDefinition("PARAM1", "p1"), new StringParameterDefinition("PARAM2", "p2")));
         // TODO use params when updating workflow-cps/workflow-job
         ds.setDefinition(new CpsFlowDefinition("echo \"${PARAM1} - ${PARAM2}\"", true));
-        j.buildAndAssertSuccess(us);
-        j.assertLogContains("first - p2", ds.getLastBuild());
+        r.buildAndAssertSuccess(us);
+        r.assertLogContains("first - p2", ds.getLastBuild());
     }
 
     @LocalData
-    @Test public void storedForm() throws Exception {
-        WorkflowJob us = j.jenkins.getItemByFullName("us", WorkflowJob.class);
+    @Test
+    void storedForm() throws Exception {
+        WorkflowJob us = r.jenkins.getItemByFullName("us", WorkflowJob.class);
         WorkflowRun us1 = us.getBuildByNumber(1);
-        WorkflowJob ds = j.jenkins.getItemByFullName("ds", WorkflowJob.class);
+        WorkflowJob ds = r.jenkins.getItemByFullName("ds", WorkflowJob.class);
         WorkflowRun ds1 = ds.getBuildByNumber(1);
         ds1.setDescription("something");
-        j.assertBuildStatusSuccess(j.waitForCompletion(ds1));
-        j.assertBuildStatusSuccess(j.waitForCompletion(us1));
+        r.assertBuildStatusSuccess(r.waitForCompletion(ds1));
+        r.assertBuildStatusSuccess(r.waitForCompletion(us1));
     }
 
     @Test
     @Issue("JENKINS-38887")
-    public void triggerOrgFolder() throws Exception {
+    void triggerOrgFolder() throws Exception {
         try (MockSCMController c = MockSCMController.create()) {
             c.createRepository("foo");
-            WorkflowJob us = j.jenkins.createProject(WorkflowJob.class, "us");
+            WorkflowJob us = r.jenkins.createProject(WorkflowJob.class, "us");
             us.setDefinition(new CpsFlowDefinition("build job:'ds', wait:false", true));
-            OrganizationFolder ds = j.jenkins.createProject(OrganizationFolder.class, "ds");
+            OrganizationFolder ds = r.jenkins.createProject(OrganizationFolder.class, "ds");
             ds.getSCMNavigators().add(new MockSCMNavigator(c, new MockSCMDiscoverBranches()));
             ds.getProjectFactories().add(new DummyMultiBranchProjectFactory());
-            j.waitUntilNoActivity();
+            r.waitUntilNoActivity();
             assertThat(ds.getComputation().getResult(), nullValue());
-            j.buildAndAssertSuccess(us);
-            j.waitUntilNoActivity();
+            r.buildAndAssertSuccess(us);
+            r.waitUntilNoActivity();
             assertThat(ds.getComputation().getResult(), notNullValue());
         }
     }
@@ -613,45 +646,48 @@ public class BuildTriggerStepTest {
     }
 
     @Issue("SECURITY-433")
-    @Test public void permissions() throws Exception {
-        WorkflowJob us = j.jenkins.createProject(WorkflowJob.class, "us");
+    @Test
+    void permissions() throws Exception {
+        WorkflowJob us = r.jenkins.createProject(WorkflowJob.class, "us");
         us.setDefinition(new CpsFlowDefinition("build 'ds'", true));
-        WorkflowJob ds = j.jenkins.createProject(WorkflowJob.class, "ds");
+        WorkflowJob ds = r.jenkins.createProject(WorkflowJob.class, "ds");
         ds.setDefinition(new CpsFlowDefinition("", true));
-        j.jenkins.setSecurityRealm(j.createDummySecurityRealm());
+        r.jenkins.setSecurityRealm(r.createDummySecurityRealm());
         QueueItemAuthenticatorConfiguration.get().getAuthenticators().add(new MockQueueItemAuthenticator(Collections.singletonMap("us", User.getById("dev", true).impersonate())));
         // Control case: dev can do anything to ds.
-        j.jenkins.setAuthorizationStrategy(new MockAuthorizationStrategy().grant(Jenkins.ADMINISTER).everywhere().to("dev"));
-        j.buildAndAssertSuccess(us);
+        r.jenkins.setAuthorizationStrategy(new MockAuthorizationStrategy().grant(Jenkins.ADMINISTER).everywhere().to("dev"));
+        r.buildAndAssertSuccess(us);
         // Main test case: dev can see ds but not build it.
-        j.jenkins.setAuthorizationStrategy(new MockAuthorizationStrategy().grant(Jenkins.READ, Computer.BUILD).everywhere().to("dev").grant(Item.READ).onItems(ds).to("dev"));
-        j.assertLogContains("dev is missing the Job/Build permission", j.assertBuildStatus(Result.FAILURE, us.scheduleBuild2(0)));
+        r.jenkins.setAuthorizationStrategy(new MockAuthorizationStrategy().grant(Jenkins.READ, Computer.BUILD).everywhere().to("dev").grant(Item.READ).onItems(ds).to("dev"));
+        r.assertLogContains("dev is missing the Job/Build permission", r.assertBuildStatus(Result.FAILURE, us.scheduleBuild2(0)));
         // Aux test case: dev cannot see ds.
-        j.jenkins.setAuthorizationStrategy(new MockAuthorizationStrategy().grant(Jenkins.READ, Computer.BUILD).everywhere().to("dev"));
-        j.assertLogContains("No item named ds found", j.assertBuildStatus(Result.FAILURE, us.scheduleBuild2(0)));
+        r.jenkins.setAuthorizationStrategy(new MockAuthorizationStrategy().grant(Jenkins.READ, Computer.BUILD).everywhere().to("dev"));
+        r.assertLogContains("No item named ds found", r.assertBuildStatus(Result.FAILURE, us.scheduleBuild2(0)));
         // Aux test case: dev can learn of the existence of ds but no more.
-        j.jenkins.setAuthorizationStrategy(new MockAuthorizationStrategy().grant(Jenkins.READ, Computer.BUILD).everywhere().to("dev").grant(Item.DISCOVER).onItems(ds).to("dev"));
-        j.assertLogContains("Please login to access job ds", j.assertBuildStatus(Result.FAILURE, us.scheduleBuild2(0)));
+        r.jenkins.setAuthorizationStrategy(new MockAuthorizationStrategy().grant(Jenkins.READ, Computer.BUILD).everywhere().to("dev").grant(Item.DISCOVER).onItems(ds).to("dev"));
+        r.assertLogContains("Please login to access job ds", r.assertBuildStatus(Result.FAILURE, us.scheduleBuild2(0)));
     }
 
     @Issue("JENKINS-48632")
     @Test
-    public void parameterDescriptions() throws Exception {
-        WorkflowJob ds = j.jenkins.createProject(WorkflowJob.class, "ds");
-        ds.setDefinition(new CpsFlowDefinition("properties([\n" +
-                "  parameters([\n" +
-                "    booleanParam(defaultValue: true, description: 'flag description', name: 'flag'),\n" +
-                "    string(defaultValue: 'default string', description: 'strParam description', name: 'strParam')\n" +
-                "  ])\n" +
-                "])\n", true));
+    void parameterDescriptions() throws Exception {
+        WorkflowJob ds = r.jenkins.createProject(WorkflowJob.class, "ds");
+        ds.setDefinition(new CpsFlowDefinition("""
+                properties([
+                  parameters([
+                    booleanParam(defaultValue: true, description: 'flag description', name: 'flag'),
+                    string(defaultValue: 'default string', description: 'strParam description', name: 'strParam')
+                  ])
+                ])
+                """, true));
         // Define the parameters
-        j.buildAndAssertSuccess(ds);
+        r.buildAndAssertSuccess(ds);
 
-        WorkflowJob us = j.jenkins.createProject(WorkflowJob.class, "us");
+        WorkflowJob us = r.jenkins.createProject(WorkflowJob.class, "us");
         us.setDefinition(new CpsFlowDefinition("build job: 'ds', parameters: [booleanParam(name: 'flag', value: false)]\n", true));
-        j.buildAndAssertSuccess(us);
+        r.buildAndAssertSuccess(us);
 
-        j.waitUntilNoActivity();
+        r.waitUntilNoActivity();
 
         WorkflowRun r = ds.getBuildByNumber(2);
         assertNotNull(r);
@@ -670,24 +706,27 @@ public class BuildTriggerStepTest {
 
     @Issue("JENKINS-52038")
     @Test
-    public void invalidChoiceParameterValue() throws Exception {
-        WorkflowJob ds = j.jenkins.createProject(WorkflowJob.class, "ds");
-        ds.setDefinition(new CpsFlowDefinition("properties([\n" +
-                "  parameters([\n" +
-                "    choice(name:'letter', description: 'a letter', choices: ['a', 'b'].join(\"\\n\"))\n" +
-                "  ])\n" +
-                "])\n", true));
+    void invalidChoiceParameterValue() throws Exception {
+        WorkflowJob ds = r.jenkins.createProject(WorkflowJob.class, "ds");
+        ds.setDefinition(new CpsFlowDefinition("""
+                properties([
+                  parameters([
+                    choice(name:'letter', description: 'a letter', choices: ['a', 'b'].join("\\n"))
+                  ])
+                ])
+                """, true));
         // Define the parameters
-        j.buildAndAssertSuccess(ds);
+        r.buildAndAssertSuccess(ds);
 
-        WorkflowJob us = j.jenkins.createProject(WorkflowJob.class, "us");
+        WorkflowJob us = r.jenkins.createProject(WorkflowJob.class, "us");
         us.setDefinition(new CpsFlowDefinition("build job: 'ds', parameters: [string(name: 'letter', value: 'c')]\n", true));
-        j.assertLogContains("Invalid parameter value: (StringParameterValue) letter='c'",
-                j.assertBuildStatus(Result.FAILURE, us.scheduleBuild2(0)));
+        r.assertLogContains("Invalid parameter value: (StringParameterValue) letter='c'",
+                r.assertBuildStatus(Result.FAILURE, us.scheduleBuild2(0)));
     }
 
-    @Test public void snippetizerRoundTrip() throws Exception {
-        SnippetizerTester st = new SnippetizerTester(j);
+    @Test
+    void snippetizerRoundTrip() throws Exception {
+        SnippetizerTester st = new SnippetizerTester(r);
         BuildTriggerStep step = new BuildTriggerStep("downstream");
         st.assertRoundTrip(step, "build 'downstream'");
         step.setParameters(Arrays.asList(new StringParameterValue("branch", "default"), new BooleanParameterValue("correct", true)));
@@ -699,11 +738,12 @@ public class BuildTriggerStepTest {
     }
 
     @Issue("JENKINS-26093")
-    @Test public void generateSnippetForBuildTrigger() throws Exception {
-        SnippetizerTester st = new SnippetizerTester(j);
-        MockFolder d1 = j.createFolder("d1");
+    @Test
+    void generateSnippetForBuildTrigger() throws Exception {
+        SnippetizerTester st = new SnippetizerTester(r);
+        MockFolder d1 = r.createFolder("d1");
         FreeStyleProject ds = d1.createProject(FreeStyleProject.class, "ds");
-        MockFolder d2 = j.createFolder("d2");
+        MockFolder d2 = r.createFolder("d2");
         WorkflowJob us = d2.createProject(WorkflowJob.class, "us");
         ds.addProperty(new ParametersDefinitionProperty(new StringParameterDefinition("key", ""), new BooleanParameterDefinition("flag", false, "")));
         String snippet = "build job: '../d1/ds', parameters: [string(name: 'key', value: 'stuff'), booleanParam(name: 'flag', value: true)]";
@@ -711,121 +751,127 @@ public class BuildTriggerStepTest {
     }
 
     @Issue("JENKINS-29739")
-    @Test public void generateSnippetForBuildTriggerSingle() throws Exception {
-        SnippetizerTester st = new SnippetizerTester(j);
-        FreeStyleProject ds = j.jenkins.createProject(FreeStyleProject.class, "ds1");
-        FreeStyleProject us = j.jenkins.createProject(FreeStyleProject.class, "us1");
+    @Test
+    void generateSnippetForBuildTriggerSingle() throws Exception {
+        SnippetizerTester st = new SnippetizerTester(r);
+        FreeStyleProject ds = r.jenkins.createProject(FreeStyleProject.class, "ds1");
+        FreeStyleProject us = r.jenkins.createProject(FreeStyleProject.class, "us1");
         ds.addProperty(new ParametersDefinitionProperty(new StringParameterDefinition("key", "")));
         String snippet = "build job: 'ds1', parameters: [string(name: 'key', value: 'stuff')]";
         st.assertGenerateSnippet("{'stapler-class':'" + BuildTriggerStep.class.getName() + "', 'job':'ds1', 'parameter': {'name':'key', 'value':'stuff'}}", snippet, us.getAbsoluteUrl() + "configure");
     }
 
-    @Test public void generateSnippetForBuildTriggerNone() throws Exception {
-        SnippetizerTester st = new SnippetizerTester(j);
-        FreeStyleProject ds = j.jenkins.createProject(FreeStyleProject.class, "ds0");
-        FreeStyleProject us = j.jenkins.createProject(FreeStyleProject.class, "us0");
+    @Test
+    void generateSnippetForBuildTriggerNone() throws Exception {
+        SnippetizerTester st = new SnippetizerTester(r);
+        FreeStyleProject ds = r.jenkins.createProject(FreeStyleProject.class, "ds0");
+        FreeStyleProject us = r.jenkins.createProject(FreeStyleProject.class, "us0");
         st.assertGenerateSnippet("{'stapler-class':'" + BuildTriggerStep.class.getName() + "', 'job':'ds0'}", "build 'ds0'", us.getAbsoluteUrl() + "configure");
     }
 
     @Test
-    public void buildStepDocs() throws Exception {
+    void buildStepDocs() throws Exception {
         try {
             SnippetizerTester.assertDocGeneration(BuildTriggerStep.class);
         } catch (Exception e) {
             // TODO: Jenkins 2.236+ broke structs-based databinding and introspection of PasswordParameterValue, JENKINS-62305.
-            assumeThat(e.getMessage(), not(containsString("There's no @DataBoundConstructor on any constructor of class hudson.util.Secret")));
+            assumeFalse(e.getMessage().contains("There's no @DataBoundConstructor on any constructor of class hudson.util.Secret"));
             throw e;
         }
     }
 
-    @Test public void automaticParameterConversion() throws Exception {
+    @Test
+    void automaticParameterConversion() throws Exception {
         // Downstream Job
-        WorkflowJob ds = j.createProject(WorkflowJob.class);
+        WorkflowJob ds = r.createProject(WorkflowJob.class);
         ds.addProperty(new ParametersDefinitionProperty(
                 new PasswordParameterDefinition("my-password", "default", "description"),
                 new BooleanParameterDefinition("my-boolean", false, "description")
         ));
         ds.setDefinition(new CpsFlowDefinition(
-                "echo('Password: ' + params['my-password'])\n" +
-                "echo('Boolean: ' + params['my-boolean'])\n", true));
+                """
+                        echo('Password: ' + params['my-password'])
+                        echo('Boolean: ' + params['my-boolean'])
+                        """, true));
         // Upstream Job
-        WorkflowJob us = j.createProject(WorkflowJob.class);
+        WorkflowJob us = r.createProject(WorkflowJob.class);
         String def = "build(job: '" + ds.getName() + "', parameters: [%s])";
 
         // A password parameter passed as a string parameter is converted.
         us.setDefinition(new CpsFlowDefinition(String.format(def, "string(name: 'my-password', value: 'secret')"), true));
-        WorkflowRun us1 = j.buildAndAssertSuccess(us);
+        WorkflowRun us1 = r.buildAndAssertSuccess(us);
         WorkflowRun ds1 = ds.getBuildByNumber(1);
-        j.assertLogContains("The parameter 'my-password' did not have the type expected", us1);
-        j.assertLogContains("Password: secret", ds1);
+        r.assertLogContains("The parameter 'my-password' did not have the type expected", us1);
+        r.assertLogContains("Password: secret", ds1);
         assertThat(getParameter(ds1, "my-password").getDescription(),
                 equalTo(Messages.BuildTriggerStepExecution_convertedParameterDescription("description", "Password Parameter", us1.toString())));
 
         // A password parameter passed as a text parameter is converted.
         us.setDefinition(new CpsFlowDefinition(String.format(def, "text(name: 'my-password', value: 'secret')"), true));
-        WorkflowRun us2 = j.buildAndAssertSuccess(us);
+        WorkflowRun us2 = r.buildAndAssertSuccess(us);
         WorkflowRun ds2 = ds.getBuildByNumber(2);
-        j.assertLogContains("The parameter 'my-password' did not have the type expected", us2);
-        j.assertLogContains("Password: secret", ds2);
+        r.assertLogContains("The parameter 'my-password' did not have the type expected", us2);
+        r.assertLogContains("Password: secret", ds2);
         assertThat(getParameter(ds2, "my-password").getDescription(),
                 equalTo(Messages.BuildTriggerStepExecution_convertedParameterDescription("description", "Password Parameter", us2.toString())));
 
         // A password parameter passed as a password parameter is not converted.
         us.setDefinition(new CpsFlowDefinition(String.format(def, "password(name: 'my-password', value: 'secret')"), true));
-        WorkflowRun us3 = j.buildAndAssertSuccess(us);
+        WorkflowRun us3 = r.buildAndAssertSuccess(us);
         WorkflowRun ds3 = ds.getBuildByNumber(3);
-        j.assertLogNotContains("The parameter 'my-password' did not have the type expected", us3);
-        j.assertLogContains("Password: secret", ds3);
+        r.assertLogNotContains("The parameter 'my-password' did not have the type expected", us3);
+        r.assertLogContains("Password: secret", ds3);
 
         // A password parameter passed as a boolean parameter is not converted.
         // This is an example of the case mentioned in the TODO comment in `BuildTriggerStepExecution.completeDefaultParameters`.
         us.setDefinition(new CpsFlowDefinition(String.format(def, "booleanParam(name: 'my-password', value: true)"), true));
-        WorkflowRun us4 = j.buildAndAssertSuccess(us);
+        WorkflowRun us4 = r.buildAndAssertSuccess(us);
         WorkflowRun ds4 = ds.getBuildByNumber(4);
-        j.assertLogNotContains("The parameter 'my-password' did not have the type expected", us4);
-        j.assertLogContains("Password: true", ds4);
+        r.assertLogNotContains("The parameter 'my-password' did not have the type expected", us4);
+        r.assertLogContains("Password: true", ds4);
 
         // A boolean parameter passed as a string parameter
         us.setDefinition(new CpsFlowDefinition(String.format(def, "string(name: 'my-boolean', value: 'true')"), true));
-        WorkflowRun us5 = j.buildAndAssertSuccess(us);
+        WorkflowRun us5 = r.buildAndAssertSuccess(us);
         WorkflowRun ds5 = ds.getBuildByNumber(5);
-        j.assertLogContains("The parameter 'my-boolean' did not have the type expected", us5);
-        j.assertLogContains("Boolean: true", ds5);
+        r.assertLogContains("The parameter 'my-boolean' did not have the type expected", us5);
+        r.assertLogContains("Boolean: true", ds5);
         assertThat(getParameter(ds5, "my-boolean").getDescription(),
                 equalTo(Messages.BuildTriggerStepExecution_convertedParameterDescription("description", "Boolean Parameter", us5.toString())));
 
         // A boolean parameter passed as a password parameter.
         // This is an example of the case mentioned in the TODO comment in `BuildTriggerStepExecution.completeDefaultParameters`.
         us.setDefinition(new CpsFlowDefinition(String.format(def, "password(name: 'my-boolean', value: 'secret')"), true));
-        WorkflowRun us6 = j.buildAndAssertSuccess(us);
+        WorkflowRun us6 = r.buildAndAssertSuccess(us);
         WorkflowRun ds6 = ds.getBuildByNumber(6);
-        j.assertLogNotContains("The parameter 'my-boolean' did not have the type expected", us6);
-        j.assertLogContains("Boolean: secret", ds6);
+        r.assertLogNotContains("The parameter 'my-boolean' did not have the type expected", us6);
+        r.assertLogContains("Boolean: secret", ds6);
 
         // A boolean parameter passed as a boolean.
         us.setDefinition(new CpsFlowDefinition(String.format(def, "booleanParam(name: 'my-boolean', value: true)"), true));
-        WorkflowRun us7 = j.buildAndAssertSuccess(us);
+        WorkflowRun us7 = r.buildAndAssertSuccess(us);
         WorkflowRun ds7 = ds.getBuildByNumber(7);
-        j.assertLogNotContains("The parameter 'my-boolean' did not have the type expected", us7);
-        j.assertLogContains("Boolean: true", ds7);
+        r.assertLogNotContains("The parameter 'my-boolean' did not have the type expected", us7);
+        r.assertLogContains("Boolean: true", ds7);
     }
 
     @Issue("JENKINS-62483")
-    @Test public void maintainParameterListOrder() throws Exception {
-        WorkflowJob us = j.jenkins.createProject(WorkflowJob.class, "us");
+    @Test
+    void maintainParameterListOrder() throws Exception {
+        WorkflowJob us = r.jenkins.createProject(WorkflowJob.class, "us");
         String params = "[string(name: 'PARAM1', value: 'p1'), " +
                 "string(name: 'PARAM2', value: 'p2'), " +
                 "string(name: 'PARAM3', value: 'p3'), " +
                 "string(name: 'PARAM4', value: 'p4')]";
         us.setDefinition(new CpsFlowDefinition(String.format("build job: 'ds', parameters: %s", params), true));
-        WorkflowJob ds = j.jenkins.createProject(WorkflowJob.class, "ds");
+        WorkflowJob ds = r.jenkins.createProject(WorkflowJob.class, "ds");
         ds.addProperty(new ParametersDefinitionProperty(
                 new StringParameterDefinition("PARAM1", ""),
                 new StringParameterDefinition("PARAM2", ""),
                 new StringParameterDefinition("PARAM3", ""),
                 new StringParameterDefinition("PARAM4", "")));
         ds.setDefinition(new CpsFlowDefinition("echo \"${PARAM1} - ${PARAM2} - ${PARAM3} - ${PARAM4}\"", true));
-        j.buildAndAssertSuccess(us);
+        r.buildAndAssertSuccess(us);
         ParametersAction buildParams = ds.getLastBuild().getAction(ParametersAction.class);
         List<String> parameterNames = new ArrayList<>();
         for (ParameterValue parameterValue : buildParams.getAllParameters()) {
@@ -835,36 +881,39 @@ public class BuildTriggerStepTest {
     }
 
     @Issue("JENKINS-62305")
-    @Test public void passwordParameter() throws Exception {
-        WorkflowJob ds = j.createProject(WorkflowJob.class);
+    @Test
+    void passwordParameter() throws Exception {
+        WorkflowJob ds = r.createProject(WorkflowJob.class);
         ds.addProperty(new ParametersDefinitionProperty(
                 new PasswordParameterDefinition("my-password", "", "")));
         ds.setDefinition(new CpsFlowDefinition(
                 "echo('Password: ' + params['my-password'])\n", true));
-        WorkflowJob us = j.createProject(WorkflowJob.class);
+        WorkflowJob us = r.createProject(WorkflowJob.class);
         us.setDefinition(new CpsFlowDefinition(
                 "build(job: '" + ds.getName() + "', parameters: [password(name: 'my-password', value: 'secret')])", true));
-        j.buildAndAssertSuccess(us);
-        j.assertLogContains("Password: secret", ds.getBuildByNumber(1));
+        r.buildAndAssertSuccess(us);
+        r.assertLogContains("Password: secret", ds.getBuildByNumber(1));
     }
 
-    @Test public void credentialsParameter() throws Exception {
-        WorkflowJob ds = j.createProject(WorkflowJob.class);
+    @Test
+    void credentialsParameter() throws Exception {
+        WorkflowJob ds = r.createProject(WorkflowJob.class);
         ds.addProperty(new ParametersDefinitionProperty(
                 new CredentialsParameterDefinition("my-credential", "", "", Credentials.class.getName(), false)));
         ds.setDefinition(new CpsFlowDefinition(
                 "echo('Credential: ' + params['my-credential'])\n", true));
-        WorkflowJob us = j.createProject(WorkflowJob.class);
+        WorkflowJob us = r.createProject(WorkflowJob.class);
         us.setDefinition(new CpsFlowDefinition(
                 "build(job: '" + ds.getName() + "', parameters: [credentials(name: 'my-credential', value: 'credential-id')])", true));
-        j.buildAndAssertSuccess(us);
-        j.assertLogContains("Credential: credential-id", ds.getBuildByNumber(1));
+        r.buildAndAssertSuccess(us);
+        r.assertLogContains("Credential: credential-id", ds.getBuildByNumber(1));
     }
 
     @Issue("SECURITY-2519")
-    @Test public void generateSnippetForBuildTriggerWhenDefaultPasswordParameterThenDoNotReturnRealPassword() throws Exception {
-        SnippetizerTester st = new SnippetizerTester(j);
-        FreeStyleProject us = j.createProject(FreeStyleProject.class, "project1");
+    @Test
+    void generateSnippetForBuildTriggerWhenDefaultPasswordParameterThenDoNotReturnRealPassword() throws Exception {
+        SnippetizerTester st = new SnippetizerTester(r);
+        FreeStyleProject us = r.createProject(FreeStyleProject.class, "project1");
         us.addProperty(new ParametersDefinitionProperty(
                 new PasswordParameterDefinition("password", "mySecret", "description")
         ));
@@ -875,7 +924,8 @@ public class BuildTriggerStepTest {
     }
 
     @LocalData
-    @Test public void downstreamFailureCauseSerialCompatibility() throws Exception {
+    @Test
+    void downstreamFailureCauseSerialCompatibility() throws Exception {
         // LocalData created as of eace550 with this test script:
         /*
         WorkflowJob us = j.jenkins.createProject(WorkflowJob.class, "us");
@@ -885,7 +935,7 @@ public class BuildTriggerStepTest {
         ds.setDefinition(new CpsFlowDefinition("error 'oops!'", true));
         j.buildAndAssertStatus(Result.FAILURE, us);
         */
-        var us = j.jenkins.getItemByFullName("us", WorkflowJob.class);
+        var us = r.jenkins.getItemByFullName("us", WorkflowJob.class);
         var b = us.getBuildByNumber(1);
         var failure = (FlowInterruptedException) b.getExecution().getCauseOfFailure();
         assertThat(failure.getCauses(), contains(instanceOf(DownstreamFailureCause.class)));
@@ -898,13 +948,14 @@ public class BuildTriggerStepTest {
         assertThat(writer.toString(), containsString("DoWnStReAm #1 completed with status FAILURE"));
     }
 
-    @Test public void downstreamFailureCauseMessage() throws Exception {
-        WorkflowJob us = j.jenkins.createProject(WorkflowJob.class, "us");
+    @Test
+    void downstreamFailureCauseMessage() throws Exception {
+        WorkflowJob us = r.jenkins.createProject(WorkflowJob.class, "us");
         us.setDefinition(new CpsFlowDefinition("build 'ds'", true));
-        WorkflowJob ds = j.jenkins.createProject(WorkflowJob.class, "ds");
+        WorkflowJob ds = r.jenkins.createProject(WorkflowJob.class, "ds");
         ds.setDisplayName("DoWnStReAm");
         ds.setDefinition(new CpsFlowDefinition("error 'oops!'", true));
-        var b = j.buildAndAssertStatus(Result.FAILURE, us);
+        var b = r.buildAndAssertStatus(Result.FAILURE, us);
         var failure = (FlowInterruptedException) b.getExecution().getCauseOfFailure();
         assertThat(failure.getCauses(), contains(instanceOf(DownstreamFailureCause.class)));
         var cause = (DownstreamFailureCause) failure.getCauses().get(0);
